Fix feedback form appearing behind expanded cards.

--- a/BlazarUI/app/stylus/components/feedback.styl
+++ b/BlazarUI/app/stylus/components/feedback.styl
@@ -2,7 +2,7 @@
 
 .feedback-container
   position fixed
-  z-index 2
+  z-index 10
   height 325px
   width 540px
   bottom -325px
@@ -46,7 +46,7 @@
 
 .feedback__sent
   text-align center
-  
+
   .submit-more-btn
     margin-top 10px
 
